tests/NormalTests/paczka1/fuzzy1/11075840.err
Error in line 2: c65tQy1 A480 38,2
Error in line 5: S977 A553 38,9
Error in line 13: S977 S977 28,0
Error in line 18: S977 S11 84,1
